src/styles/app/contact.module.css
.container {
  padding-top: 70px;
  display: flex;
  justify-content: center;
  align-items: flex-start;
}

#content_card {
  width: 25vw;
  margin: 50px 0px;
  height: fit-content;
  display: block;
}

.social {
  display: flex;
  align-items: center;
  height: 80px;
  padding: 10px;
  border-radius: 10px;
  margin-bottom: 10px;
  font-size: 18px;
  font-weight: bold;
  color: var(--color-text);
  text-decoration: none;
  cursor: pointer;
  transition: 0.5s;
}

.social:hover {
  background-color: var(--color-highlight);
  color: #F9F5FF;
}

.social img {
  width: 70px;
  height: 70px;
  margin-right: 20px;
}

